Add .editorconfig and .gitattributes; update workflow names
Introduce .editorconfig for consistent code formatting and .gitattributes for line ending normalization. Rename workflow jobs to better reflect their purposes: "Build" for build.yaml and "Publish" for publish.yaml.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   build:
-    name: Build and publish
+    name: Publish
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
 
