--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -46,4 +46,4 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: chatbox-{{matrix.target}}
-          path: dist/*
+          path: dist
