--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,7 +43,13 @@ jobs:
 
       - run: uv run installer.py
 
-      - uses: actions/upload-artifact@v4
+#      - uses: actions/upload-artifact@v4
+#        with:
+#          name: chatbox-${{matrix.target}}
+#          path: dist
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: chatbox-{{matrix.target}}
-          path: dist
+          files: dist/
