Remove unused debugging commands from publish workflow
Commented out unnecessary `ls` and `tree` commands in the publish GitHub Actions workflow. This simplifies the workflow by removing redundant steps without affecting functionality.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -47,11 +47,10 @@ jobs:
 #        with:
 #          name: chatbox-${{matrix.target}}
 #          path: dist
-
-      - shell: bash
-        run: |
-          ls -allh dist/
-          tree dist/
+#      - shell: bash
+#        run: |
+#          ls -allh dist/
+#          tree dist/
 
       - name: Build archive
         shell: bash
