--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -67,7 +67,7 @@ jobs:
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
             mv "dist/$binary_name.exe" "$dirname"
           elif [[ "${{ matrix.os }}" == "macOS-14" || "${{ matrix.os }}" == "macOS-14-arm64" ]]; then
-            mv "dist/$binary_name.app" "$dirname"
+            mv "dist/$binary_name" "$dirname"
           else
             mv "dist/$binary_name" "$dirname"
           fi
@@ -80,9 +80,9 @@ jobs:
             echo "ASSET=$dirname.tar.gz" >> $GITHUB_ENV
           fi
 
-      - uses: actions/attest-build-provenance@v1
-        with:
-          subject-path: ${{ env.ASSET }}
+      #- uses: actions/attest-build-provenance@v1
+      #  with:
+      #    subject-path: ${{ env.ASSET }}
 
       - name: Release
         uses: softprops/action-gh-release@v2
