--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
+    "environs==14.1.1",
     "gradio>=5.17.1",
     "openai>=1.64.0",
     "pywebview>=5.4",
@@ -14,3 +15,6 @@ dev = [
     "pyinstaller>=6.12.0",
     "pywin32-ctypes>=0.2.3",
 ]
+
+[tool.uv]
+dev-dependencies = ["ruff"]
