--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -63,7 +63,7 @@ jobs:
         shell: bash
         run: |
           # Replace with the name of your binary
-          binary_name="app"
+          binary_name="chatbox"
 
           dirname="$binary_name-${{ env.VERSION }}-${{ matrix.target }}"
           mkdir "$dirname"
